HelloUltraviolet/Fixtures/RejectedSource/Parallelism/DeterminismAndNestingDiagnostics/Expected.uv
//! Expected diagnostic metadata for the DeterminismAndNestingDiagnostics rejected-source specimen.

expectedDiagnostic("E-CON-0152", "diagnostics.20.DeterminismAndNesting")
